--- a/backend-logi/Procfile
+++ b/backend-logi/Procfile
@@ -1,1 +1,1 @@
-web: python railway_migrate.py && python -c "from app import create_app, db; app = create_app('production'); app.app_context().push(); db.create_all()" && python seed.py && gunicorn --worker-class eventlet -w 1 --bind 0.0.0.0:$PORT run:app
+web: python railway_migrate.py && python -c "from app import create_app, db; app = create_app('production'); app.app_context().push(); db.create_all()" && python seed.py && gunicorn --worker-class gevent -w 1 --bind 0.0.0.0:$PORT run:app
